Fix wide SVG equations overlapping equation numbers in `corn`

--- a/styles/design-settings/corn/parts/_titles-settings.scss
+++ b/styles/design-settings/corn/parts/_titles-settings.scss
@@ -47,8 +47,8 @@
             background: linear-gradient(
                 to right, 
                 rgba(0,0,0,0) 0%, 
-                rgba(0,0,0,0.8) 15%, 
-                rgba(0,0,0,0.8) 85%, 
+                rgba(0,0,0,1) 10%, 
+                rgba(0,0,0,1) 90%, 
                 rgba(0,0,0,0) 100%
             ),
         ),
