--- a/styles/output/algebra-1-pdf.css
+++ b/styles/output/algebra-1-pdf.css
@@ -3136,21 +3136,23 @@ h4.os-subtitle + .os-figure:not(.has-splash) > figure {
   align-items: center;
   justify-content: center;
   margin-bottom: 0.7rem;
-  position: relative;
   flex-direction: row;
 }
 
 [data-type=equation]:not(.unnumbered) > .os-equation-number {
-  position: absolute;
-  right: 0;
-  top: 50%;
-  transform: translate(0, -50%);
+  flex-shrink: 0;
   font-family: Noto Sans, sans-serif, StixGeneral;
   font-size: 1rem;
   line-height: 1.5rem;
   font-weight: bold;
   color: #1E7A8F;
-  margin-right: 0.7rem;
+  margin-left: 0.7rem;
+}
+
+[data-type=equation]:not(.unnumbered) > *:not(.os-equation-number) {
+  flex: 1;
+  min-width: 0;
+  text-align: center;
 }
 
 .os-table:not(.os-unstyled-container) {
